--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">KakaoMapTest_20210430_1</string>
 
-    <string name="kakao_key">kakao_app_key</string>
+    <string name="kakao_key">aca0c0a917c2f70f0d37b66971b3d8d0</string>
 </resources>
